// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOrderUpdate, current sequence too small 1`] = `Object {}`;

exports[`handleOrderUpdate, method wrong, not loadingPairs 1`] = `Object {}`;

exports[`handleOrderUpdate, order processed already 1`] = `
Object {
  "orderHash1": 200,
}
`;

exports[`handleOrderUpdate, terminate a non existing liveOrder 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , add 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , add 2`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 10,
    "balance": 5,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 1,
    "initialSequence": 1,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 100,
    "side": "bid",
  },
}
`;

exports[`handleOrderUpdate, update orderBooks , add 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [
        Object {
          "balance": 5,
          "count": 1,
          "price": 100,
        },
      ],
      "pair": "pair",
      "version": 123456789,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 5,
          "count": 1,
          "price": 100,
          "side": "bid",
        },
      ],
      "version": 123456789,
    },
  ],
]
`;

exports[`handleOrderUpdate, update orderBooks , add 4`] = `
Object {
  "asks": Array [],
  "bids": Array [
    Object {
      "balance": 5,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 100,
    },
  ],
}
`;

exports[`handleOrderUpdate, update orderBooks , add 5`] = `
Object {
  "asks": Array [],
  "bids": Array [
    Object {
      "balance": 5,
      "count": 1,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 123456789,
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 2`] = `Object {}`;

exports[`handleOrderUpdate, update orderBooks , terminate 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 123456789,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 123456789,
      "updates": Array [
        Object {
          "change": -5,
          "count": -1,
          "price": 100,
          "side": "bid",
        },
      ],
      "version": 123456789,
    },
  ],
]
`;

exports[`handleOrderUpdate, update orderBooks , terminate 4`] = `
Object {
  "asks": Array [],
  "bids": Array [],
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 5`] = `
Object {
  "asks": Array [],
  "bids": Array [],
  "pair": "pair",
  "version": 123456789,
}
`;

exports[`handleOrderUpdate,loading Pairs 1`] = `
Array [
  Object {
    "liveOrder": Object {
      "account": "account1",
      "amount": 10,
      "balance": 5,
      "createdAt": 1234567890,
      "currentSequence": 5,
      "expiry": 1234567890000,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 1,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "pair": "pair",
      "price": 100,
      "side": "bid",
    },
    "method": "add",
    "requestor": "requestor",
    "status": "status",
  },
]
`;

exports[`handleOrderUpdate,loading Pairs 2`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`loadLiveOrders 1`] = `"orderBook"`;

exports[`loadLiveOrders 2`] = `"orderBookSnapshot"`;

exports[`loadLiveOrders 3`] = `
Array [
  Array [
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders 4`] = `
Array [
  Array [
    "code1|code2",
    "orderBook",
  ],
]
`;

exports[`loadLiveOrders 5`] = `
Array [
  Array [
    "orderBook",
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders 6`] = `
Array [
  Array [
    null,
    "code1|code2",
    Array [
      "ordersToMatch",
    ],
  ],
]
`;

exports[`loadLiveOrders 7`] = `
Array [
  Array [
    "code1|code2",
    "orderBookSnapshot",
  ],
]
`;

exports[`loadLiveOrders 8`] = `
Array [
  Array [
    "pending",
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 1,
        "initialSequence": 1,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
      "requestor": "requestor",
      "status": "status",
    },
  ],
]
`;

exports[`loadLiveOrders no match 1`] = `"orderBook"`;

exports[`loadLiveOrders no match 2`] = `"orderBookSnapshot"`;

exports[`loadLiveOrders no match 3`] = `
Array [
  Array [
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders no match 4`] = `
Array [
  Array [
    "code1|code2",
    "orderBook",
  ],
]
`;

exports[`loadLiveOrders no match 5`] = `
Array [
  Array [
    "orderBook",
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders no match 6`] = `
Array [
  Array [
    "code1|code2",
    "orderBookSnapshot",
  ],
]
`;

exports[`updateOrderSequences 1`] = `16`;

exports[`updateOrderSequences 2`] = `
Object {
  "orderHash1": 5,
  "orderHash2": 6,
  "orderHash3": 7,
  "orderHash4": 8,
  "orderHash5": 13,
  "orderHash6": 14,
  "orderHash7": 15,
  "orderHash8": 16,
}
`;
